@@ -234,6 +234,12 @@ _dump_node_state (struct node_record *dump_node_ptr, Buf buffer)
 	pack16  (dump_node_ptr->core_spec_cnt, buffer);
 	pack16  (dump_node_ptr->threads, buffer);
 	pack32  (dump_node_ptr->real_memory, buffer);
+	/* mem_spec_limit which should have never been packed in the first
+	 * place.  We don't need to keep state as the value is always read
+	 * from the slurm.conf.  If we used this value it would over write that
+	 * value so we will throw it away when unpacked.  In 17.02 this will be
+	 * removed.
+	 */
 	pack32  (dump_node_ptr->mem_spec_limit, buffer);
 	pack32  (dump_node_ptr->tmp_disk, buffer);
 	pack32  (dump_node_ptr->reason_uid, buffer);
@@ -382,6 +388,12 @@ extern int load_all_node_state ( bool state_only )
 			safe_unpack16 (&core_spec_cnt, buffer);
 			safe_unpack16 (&threads,     buffer);
 			safe_unpack32 (&real_memory, buffer);
+			/* Following unpack was for mem_spec_limit which should
+			 * have never been packed in the first place.  We
+			 * don't need to keep state as the value is always read
+			 * from the slurm.conf.  If we used this value it would
+			 * over write that value so we will throw it away here.
+			 */
 			safe_unpack32 (&mem_spec_limit, buffer);
 			safe_unpack32 (&tmp_disk,    buffer);
 			safe_unpack32 (&reason_uid,  buffer);
@@ -411,6 +423,12 @@ extern int load_all_node_state ( bool state_only )
 			safe_unpack16 (&core_spec_cnt, buffer);
 			safe_unpack16 (&threads,     buffer);
 			safe_unpack32 (&real_memory, buffer);
+			/* Following unpack was for mem_spec_limit which should
+			 * have never been packed in the first place.  We
+			 * don't need to keep state as the value is always read
+			 * from the slurm.conf.  If we used this value it would
+			 * over write that value so we will throw it away here.
+			 */
 			safe_unpack32 (&mem_spec_limit, buffer);
 			safe_unpack32 (&tmp_disk,    buffer);
 			safe_unpack32 (&reason_uid,  buffer);
@@ -439,6 +457,12 @@ extern int load_all_node_state ( bool state_only )
 			safe_unpack16 (&core_spec_cnt, buffer);
 			safe_unpack16 (&threads,     buffer);
 			safe_unpack32 (&real_memory, buffer);
+			/* Following unpack was for mem_spec_limit which should
+			 * have never been packed in the first place.  We
+			 * don't need to keep state as the value is always read
+			 * from the slurm.conf.  If we used this value it would
+			 * over write that value so we will throw it away here.
+			 */
 			safe_unpack32 (&mem_spec_limit, buffer);
 			safe_unpack32 (&tmp_disk,    buffer);
 			safe_unpack32 (&reason_uid,  buffer);
@@ -548,8 +572,6 @@ extern int load_all_node_state ( bool state_only )
 							     /* to free */
 					node_ptr->threads       = threads;
 					node_ptr->real_memory   = real_memory;
-					node_ptr->mem_spec_limit =
-						mem_spec_limit;
 					node_ptr->tmp_disk      = tmp_disk;
 				}
 				if (node_state & NODE_STATE_MAINT)
@@ -588,8 +610,6 @@ extern int load_all_node_state ( bool state_only )
 				cpu_spec_list = NULL; /* Nothing to free */
 				node_ptr->threads       = threads;
 				node_ptr->real_memory   = real_memory;
-				node_ptr->mem_spec_limit =
-					mem_spec_limit;
 				node_ptr->tmp_disk      = tmp_disk;
 			}
 
@@ -651,7 +671,6 @@ extern int load_all_node_state ( bool state_only )
 			node_ptr->core_spec_cnt = core_spec_cnt;
 			node_ptr->threads       = threads;
 			node_ptr->real_memory   = real_memory;
-			node_ptr->mem_spec_limit = mem_spec_limit;
 			node_ptr->tmp_disk      = tmp_disk;
 			node_ptr->last_response = (time_t) 0;
 			xfree(node_ptr->mcs_label);
